[EIN-22978]-accumlation chart alignment fix

--- a/src/app/dashboard/widgets/widget-wrapper/widget-wrapper.component.scss
+++ b/src/app/dashboard/widgets/widget-wrapper/widget-wrapper.component.scss
@@ -68,7 +68,7 @@ $headerHeight: 19px;
   }
 
   &__legend {
-    height: 45%;
+    height: 41%;
     overflow: auto;
     padding-top: 5px;
     cursor: default;
